--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
   "name": "ghost-in-the-machines/custom-css-and-js",
   "description": "This plugin is a suitcase for my Wordpress custom css and js",
+  "type": "wordpress-plugin",
   "require": {
-    "php": "^5.6 || ^7.0"
+    "php": "^5.6 || ^7.0",
+    "composer/installers": "v1.0.6"
   },
   "license": "MIT"
 }
