--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "wordpress-plugin",
   "require": {
     "php": "^5.6 || ^7.0",
-    "composer/installers": "v1.0.6"
+    "composer/installers": "^1.3.0"
   },
   "license": "MIT"
 }
